ServiceMonitor/deployment/api-DC.yml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "${CONTAINER}"
  namespace: "api-first-workshop"
  labels:
    app: "${CONTAINER}"
spec:
  selector:
    matchLabels:
      app: "${CONTAINER}" 
  template: 
    metadata:
      labels:
        app: "${CONTAINER}"
    spec:
      containers:
        - name: "${CONTAINER}"
          image: "${REGISTRY}/${CONTAINER}:${CONTAINER_TAG}"
          ports:
            - containerPort: 5555
              protocol: "TCP"
          volumeMounts:
            - name: config-volume
              mountPath: /opt/swagmsr/config
#            - name: license-file
#              mountPath: /opt/softwareag/IntegrationServer/config/licenseKey.xml
#              subPath: ISLicense.xml              
      volumes:
        - name: config-volume
          configMap:
            name: application-properties-is
#        - name: license-file
#          configMap:
#            name: msr-license            
  replicas: 1
