ServiceMonitor/deployment/service-route.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${CONTAINER}
  name: ${CONTAINER}-service
  namespace: ${NAMESPACE}
spec: 
  ports:
    - name: micro-gateway-tcp
      port: 4485
      protocol: TCP
      targetPort: 4485
    - name: api-container-tcp
      port: 5555
      protocol: TCP
      targetPort: 5555
  selector:
    app: ${CONTAINER}
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CONTAINER}-ingress
  namespace: "${NAMESPACE}"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: ${CONTAINER}.${HOST}
    http:
      paths:
      - backend:
          service:
            name: ${CONTAINER}-service
            port: 
              number: 5555
